--- a/sys/add-user.html
+++ b/sys/add-user.html
@@ -21,7 +21,9 @@
 	<link rel="stylesheet" href="charts/css/morris.css">
 	<!-- jvectormap -->
 	<link rel="stylesheet" href="css/jquery-jvectormap.css">
-
+	<link rel="stylesheet" href="../css/normalize.min.css">
+	<link rel="stylesheet" href="../css/txstyle.css">
+	<script src="js/common.js"></script>
 	<script src="js/modernizr.min.js"></script>
 </head>
 
@@ -48,7 +50,7 @@
 <!-- /Color Changer -->
 <div class="wrapper">
 	<!-- Page Content -->
-	<div id="content">
+	<div id="content1">
 		<!-- Top Navigation -->
 		<div class="container top-brand">
 			<nav class="navbar navbar-default">
@@ -187,7 +189,7 @@
 				<div class="container mt-0">
 					<div class="row breadcrumb-bar">
 						<div class="col-md-6">
-							<h3 class="block-title">Add 医生</h3>
+							<h3 class="block-title">添加用户</h3>
 						</div>
 						<div class="col-md-6">
 							<ol class="breadcrumb">
@@ -196,8 +198,8 @@
 										<span class="ti-home"></span>
 									</a>
 								</li>
-								<li class="breadcrumb-item">医生s</li>
-								<li class="breadcrumb-item active">Add 医生</li>
+								<li class="breadcrumb-item">人员管理</li>
+								<li class="breadcrumb-item active">添加用户</li>
 							</ol>
 						</div>
 					</div>
@@ -212,97 +214,77 @@
 					<!-- Widget Item -->
 					<div class="col-md-12">
 						<div class="widget-area-2 lochana-box-shadow">
-							<h3 class="widget-title">Add 医生</h3>
+							<h3 class="widget-title">添加用户</h3>
 							<form>
 								<div class="form-row">
 									<div class="form-group col-md-6">
-										<label for="医生-name">医生 Name</label>
-										<input type="text" class="form-control" placeholder="医生 name" id="医生-name">
+										<label for="name">姓名</label>
+										<input type="text" class="form-control" placeholder="请输入姓名" id="name">
 									</div>
 									<div class="form-group col-md-6">
-										<label for="dob">Date Of Birth</label>
-										<input type="date" placeholder="Date of Birth" class="form-control" id="dob">
+										<label for="account">登录账号</label>
+										<input type="text" placeholder="请输入登录账号" class="form-control" id="account">
                                     </div>
                                     <div class="form-group col-md-6">
-										<label for="specialization">Specialization</label>
-										<input type="text" placeholder="Specialization" class="form-control" id="specialization">
+										<label for="pwd">密码</label>
+										<input type="text" placeholder="请输入密码" class="form-control" id="pwd">
 									</div>
+<!--									<div class="form-group col-md-6">-->
+<!--										<label for="experience">Experience</label>-->
+<!--										<input type="text" placeholder="Experience" class="form-control" id="experience">-->
+<!--									</div>-->
 									<div class="form-group col-md-6">
-										<label for="experience">Experience</label>
-										<input type="text" placeholder="Experience" class="form-control" id="experience">
+										<label for="phone">电话号</label>
+										<input type="text" placeholder="请输入电话号" class="form-control" id="phone">
 									</div>
+
 									<div class="form-group col-md-6">
-										<label for="age">Age</label>
-										<input type="text" placeholder="Age" class="form-control" id="age">
-									</div>
-									<div class="form-group col-md-6">
-										<label for="phone">Phone</label>
-										<input type="text" placeholder="Phone" class="form-control" id="phone">
-									</div>
-									<div class="form-group col-md-6">
-										<label for="email">Email</label>
-										<input type="email" placeholder="email" class="form-control" id="Email">
-									</div>
-									<div class="form-group col-md-6">
-										<label for="gender">Gender</label>
-										<select class="form-control" id="gender">
-											<option>Male</option>
-											<option>Female</option>
-											<option>Other</option>
+										<label for="role">角色</label>
+										<select class="form-control" id="role">
+											<option value="">请选择角色<option>
+											<option value="0">普通员工</option>
+											<option value="1">管理员</option>
 										</select>
 									</div>
-									<div class="form-group col-md-6">
-										<label for="about-doctor">医生 Details</label>
-										<textarea placeholder="医生 Details" class="form-control" id="about-doctor" rows="3"></textarea>
-                                    </div>
-                                    <div class="form-group col-md-6">
-										<label for="address">Address</label>
-										<textarea placeholder="Address" class="form-control" id="address" rows="3"></textarea>
-									</div>
-									<div class="form-group col-md-12">
-										<label for="file">File</label>
-										<input type="file" class="form-control" id="file">
-									</div>
+<!--									<div class="form-group col-md-6">-->
+<!--										<label for="about-doctor">医生 Details</label>-->
+<!--										<textarea placeholder="医生 Details" class="form-control" id="about-doctor" rows="3"></textarea>-->
+<!--                                    </div>-->
+<!--                                    <div class="form-group col-md-6">-->
+<!--										<label for="address">Address</label>-->
+<!--										<textarea placeholder="Address" class="form-control" id="address" rows="3"></textarea>-->
+<!--									</div>-->
+<!--									<div class="form-group col-md-12">-->
+<!--										<label for="file">File</label>-->
+<!--										<input type="file" class="form-control" id="file">-->
+<!--									</div>-->
 																		
 									<div class="form-check col-md-12 mb-2">
-										<div class="text-left">
-											<div class="custom-control custom-checkbox">
-												<input class="custom-control-input" type="checkbox" id="ex-check-2">
-												<label class="custom-control-label" for="ex-check-2">Please Confirm</label>
-											</div>
-										</div>
+<!--										<div class="text-left">-->
+<!--											<div class="custom-control custom-checkbox">-->
+<!--												<input class="custom-control-input" type="checkbox" id="ex-check-2">-->
+<!--												<label class="custom-control-label" for="ex-check-2">Please Confirm</label>-->
+<!--											</div>-->
+<!--										</div>-->
 									</div>
 									<div class="form-group col-md-6 mb-3">
-										<button type="submit" class="btn btn-primary btn-lg">Submit</button>
+										<button type="button" class="btn btn-primary btn-lg" id="sub" onclick="login()">提交</button>
 									</div>
 								</div>
 							</form>
-							<!-- Alerts-->
-							<div class="alert alert-success alert-dismissible fade show" role="alert">
-								<strong>Successfully Done!</strong> Please Check in doctors list
-								<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-									<span aria-hidden="true">×</span>
-								</button>
-							</div>
-							<div class="alert alert-warning alert-dismissible fade show" role="alert">
-								<strong>Holy guacamole!</strong> You should check in on some of those fields below.
-								<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-									<span aria-hidden="true">×</span>
-								</button>
-							</div>
-							<!-- /Alerts-->
 						</div>
 					</div>
-					<!-- /Widget Item -->
 				</div>
 			</div>
-			<!-- /Main Content -->
-			<!--Copy Rights-->
-			<div class="container">
-				<div class="d-sm-flex justify-content-center">
-				  <span class="text-muted text-center d-block d-sm-inline-block">Copyright © 2018 <a href="#" target="_blank">konnectcode</a>. All rights reserved.</span> 更多模板：<a href="http://www.mycodes.net/" target="_blank">源码之家</a>
-				</div>
+
+		<div class="toast">
+			<div class="toast__icon" role="alert" aria-live="assertive" aria-atomic="true">
 			</div>
+			<div class="toast__content">
+				<h2 id ="content"></h2>
+				<!--		<p>请输入用户名或密码</p>-->
+			</div>
+		</div>
 			<!-- /Copy Rights-->
 		</div>
 		<!-- /Page Content -->
@@ -311,6 +293,7 @@
 	<a id="back-to-top" href="#" class="back-to-top">
 		<span class="ti-angle-up"></span>
 	</a>
+
 	<!-- /Back to Top -->
 	<!-- Jquery Library-->
 	<script src="js/jquery-3.2.1.min.js"></script>
@@ -326,6 +309,49 @@
 	<!-- Custom Script-->
 	<script src="js/custom.js"></script>
 
-</body>
 
+
+</body>
+	<script>
+		function notNull(name,pwd,account,phone,role){
+			if(name == ""||pwd == "" || account == "" || phone == "" || role == ""){
+				jsWindow("请输入完整信息",$("#sub"),0);
+				return false;
+			}
+		}
+		function jsWindow(message,trigger,index){
+			$("#content").html(message);
+			const toasts = document.querySelectorAll(".toast");
+			toasts[index].classList.add("toast--active");
+			toastTimeout = setTimeout(() => {
+				toasts[index].classList.remove("toast--active");
+			}, 3500);
+		}
+		function login(){
+			const name = $("#name").val();
+			const pwd = $("#pwd").val();
+			const account = $("#account").val();
+			const phone = $("#phone").val();
+			const role = $("#role").select().val();
+			notNull(name,pwd,account,phone,role);
+			$.ajax({
+				url:baseUrl+"login/insert",
+				type:"get",
+				data:{name:name,pwd:pwd,account:account,phone:phone,role:role},
+				success:function (data){
+					if(data.success){
+						jsWindow("添加成功",$("#sub"),0);
+						window.location.href="users.html";
+					}
+					else{
+						jsWindow("添加失败",$("#sub"),0);
+					}
+			}
+			});
+		}
+
+
+
+
+	</script>
 </html>
