--- a/sys/add-order.html
+++ b/sys/add-order.html
@@ -187,7 +187,7 @@
 				<div class="container mt-0">
 					<div class="row breadcrumb-bar">
 						<div class="col-md-6">
-							<h3 class="block-title">Add Appointment</h3>
+							<h3 class="block-title">添加采购订单</h3>
 						</div>
 						<div class="col-md-6">
 							<ol class="breadcrumb">
@@ -196,8 +196,8 @@
 										<span class="ti-home"></span>
 									</a>
 								</li>
-								<li class="breadcrumb-item">出诊</li>
-								<li class="breadcrumb-item active">Add Appointment</li>
+								<li class="breadcrumb-item">订单管理</li>
+								<li class="breadcrumb-item active">添加采购订单</li>
 							</ol>
 						</div>
 					</div>
@@ -212,78 +212,66 @@
 					<!-- Widget Item -->
 					<div class="col-md-12">
 						<div class="widget-area-2 lochana-box-shadow">
-							<h3 class="widget-title">Add Appointment</h3>
+							<h3 class="widget-title">添加采购订单</h3>
 							<form>
 								<div class="form-row">
 									<div class="form-group col-md-6">
-										<label for="patient-name">Patient ID</label>
-										<input type="text" class="form-control" placeholder="Patient ID" id="patient-id">
-									</div>
-									<div class="form-group col-md-6">
-										<label for="department">Department</label>
-										<select class="form-control" id="department">
-											<option>Neuro</option>
-											<option>皮肤科</option>
-											<option>General</option>
+										<label for="merchId">药物</label>
+										<select class="form-control" id="merchId">
+<!--											<option>阿莫西林</option>-->
+<!--											<option>感冒灵</option>-->
+<!--											<option>板蓝根</option>-->
 										</select>
 									</div>
 									<div class="form-group col-md-6">
-										<label for="doctor-name">医生 Name</label>
-										<input type="text" placeholder="医生 Name" class="form-control" id="doctor-name">
+										<label for="cusName">客户</label>
+										<input type="text" placeholder="请输入客户名称" class="form-control" id="cusName">
 									</div>
 									<div class="form-group col-md-6">
-										<label for="appointment-date">Appointment Date</label>
-										<input type="date" placeholder="Appointment Date" class="form-control" id="appointment-date">
-									</div>
-									<div class="form-group col-md-6">
-										<label for="time-slot">Time Slot</label>
-										<select class="form-control" id="time-slot">
-											<option>10AM-11AM</option>
-											<option>11AM-12pm</option>
-											<option>12PM-01PM</option>
-											<option>2PM-3PM</option>
-											<option>3PM-4PM</option>
-											<option>4PM-5PM</option>
-											<option>6PM-7PM</option>
-											<option>7PM-8PM</option>
-											<option>8PM-9PM</option>
+										<label for="custType">客户类型</label>
+										<select class="form-control" id="custType">
+											<option>A类</option>
+											<option>B类</option>
+											<option>C类</option>
 										</select>
 									</div>
+
 									<div class="form-group col-md-6">
-										<label for="token-number">Token Number <small>(Auto Generated)</small></label>
-										<input type="text" placeholder="Token Number" class="form-control" id="token-number">
+										<label for="count">定购数量 </label>
+										<input type="text" placeholder="请输入定购数量" class="form-control" id="count">
 									</div>
 									<div class="form-group col-md-12">
-										<label for="problem">Problem</label>
-										<textarea placeholder="Problem" class="form-control" id="problem" rows="3"></textarea>
+										<label for="phone">送货电话</label>
+										<input type="text" placeholder="请输入送货电话" class="form-control" id="phone">
 									</div>
-																		
-									<div class="form-check col-md-12 mb-2">
-										<div class="text-left">
-											<div class="custom-control custom-checkbox">
-												<input class="custom-control-input" type="checkbox" id="ex-check-2">
-												<label class="custom-control-label" for="ex-check-2">Please Confirm</label>
-											</div>
-										</div>
+
+									<div class="form-group col-md-12">
+										<label for="address">送货地址</label>
+										<textarea placeholder="请输入送货地址" class="form-control" id="address" rows="3"></textarea>
 									</div>
+									<div class="form-group col-md-12">
+										<label for="remark">备注</label>
+										<textarea placeholder="请输入备注" class="form-control" id="remark" rows="3"></textarea>
+									</div>
+
 									<div class="form-group col-md-6 mb-3">
-										<button type="submit" class="btn btn-primary btn-lg">Submit</button>
+										<button type="button" class="btn btn-primary btn-lg" onclick="subInfo()">提交</button>
 									</div>
 								</div>
 							</form>
 							<!-- Alerts-->
-							<div class="alert alert-success alert-dismissible fade show" role="alert">
-								<strong>Successfully Done!</strong> Appointment token Generated
-								<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-									<span aria-hidden="true">×</span>
-								</button>
-							</div>
-							<div class="alert alert-warning alert-dismissible fade show" role="alert">
-								<strong>Holy guacamole!</strong> You should check in on some of those fields below.
-								<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-									<span aria-hidden="true">×</span>
-								</button>
-							</div>
+<!--							<div class="alert alert-success alert-dismissible fade show" role="alert">-->
+<!--								<strong>操作成功</strong> -->
+<!--								<button type="button" class="close" data-dismiss="alert" aria-label="Close">-->
+<!--									<span aria-hidden="true">×</span>-->
+<!--								</button>-->
+<!--							</div>-->
+<!--							<div class="alert alert-warning alert-dismissible fade show" role="alert">-->
+<!--								<strong>Holy guacamole!</strong> You should check in on some of those fields below.-->
+<!--								<button type="button" class="close" data-dismiss="alert" aria-label="Close">-->
+<!--									<span aria-hidden="true">×</span>-->
+<!--								</button>-->
+<!--							</div>-->
 							<!-- /Alerts-->
 						</div>
 					</div>
@@ -292,11 +280,7 @@
 			</div>
 			<!-- /Main Content -->
 			<!--Copy Rights-->
-			<div class="container">
-				<div class="d-sm-flex justify-content-center">
-				  <span class="text-muted text-center d-block d-sm-inline-block">Copyright © 2018 <a href="#" target="_blank">konnectcode</a>. All rights reserved.</span> 更多模板：<a href="http://www.mycodes.net/" target="_blank">源码之家</a>
-				</div>
-			</div>
+
 			<!-- /Copy Rights-->
 		</div>
 		<!-- /Page Content -->
@@ -319,7 +303,64 @@
     
 	<!-- Custom Script-->
 	<script src="js/custom.js"></script>
+	<script src="js/common.js"></script>
 
 </body>
+<script>
+	window.onload = initData;
+
+	function initData(){
+		$.ajax({
+			url:baseUrl+"order/getOption",
+			type:"get",
+			data:{},
+			success:function (data){
+				if(data.success){
+					var sel = $("#merchId");
+					console.info(data.data);
+					var option ="";
+					for(var i = 0;i <data.data.length;i++){
+						 option+="<option value= "+data.data[i].id+">"+data.data[i].name+"</option>";
+					}
+					sel.append(option);
+				}
+			}
+		});
+	}
+
+	function notNull(merchId,cusName,cusType,count,phone,address){
+		if(merchId ==""||cusName==""||cusType==""||count==""||phone==""||address==""){
+			alert("除备注外的必填项不能为空");
+		}
+
+	}
+
+	function subInfo(){
+		var merchId = $("#merchId").select().val();
+		var merchName = $("#merchId").select().text();
+		var cusType = $("#cusType").select().val();
+		var cusName = $("#cusName").val();
+		var count = $("#count").val();
+		var phone= $("#phone").val();
+		var address= $("#address").val();
+		var remark = $("#remark").val();
+		notNull(merchId,cusName,cusType,count,phone,address);
+		$.ajax({
+			url:baseUrl+"order/createOrder",
+			type:"get",
+			data:{merchId:merchId,merchName:merchName,cusName:cusName,cusType:cusType,count:count,phone:phone,address:address,remark:remark},
+			success:function (data){
+				if(data.success){
+					alert("订单创建完成");
+					window.location.href="orders.html";
+				}else{
+					alert("库存不足");
+				}
+			}
+		});
+
+
+	}
+</script>
 
 </html>
