--- a/sys/orders.html
+++ b/sys/orders.html
@@ -97,7 +97,7 @@
 							<a class="dropdown-item" href="#">
 								<span class="ti-wheelchair"></span> 新消息</a>
 							<a class="dropdown-item" href="#">
-								<span class="ti-money"></span> 已收款订单</a>
+								<span class="ti-money"></span> 已完成订单</a>
 							<a class="dropdown-item" href="#">
 								<span class="ti-time"></span>在途订单</a>
 							<a class="dropdown-item" href="#">
@@ -155,7 +155,7 @@
 							   aria-expanded="false"><span class="ti-pencil-alt"></span> 订单管理</a>
 							<div class="dropdown-menu">
 								<a class="dropdown-item" href="add-order.html">添加采购订单</a>
-								<a class="dropdown-item" href="orders.html">在途订单信息</a>
+								<a class="dropdown-item" href="orders.html">订单列表信息</a>
 								<a class="dropdown-item" href="his-orders.html">历史订单信息</a>
 							</div>
 						</li>
@@ -187,7 +187,7 @@
 				<div class="container mt-0">
 					<div class="row breadcrumb-bar">
 						<div class="col-md-6">
-							<h3 class="block-title">出诊</h3>
+							<h3 class="block-title">订单列表</h3>
 						</div>
 						<div class="col-md-6">
 							<ol class="breadcrumb">
@@ -196,8 +196,8 @@
 										<span class="ti-home"></span>
 									</a>
 								</li>
-								<li class="breadcrumb-item">出诊</li>
-								<li class="breadcrumb-item active">出诊 List</li>
+								<li class="breadcrumb-item">订单管理</li>
+								<li class="breadcrumb-item active">订单列表信息</li>
 							</ol>
 						</div>
 					</div>
@@ -212,7 +212,7 @@
 					<!-- Widget Item -->
 					<div class="col-md-12">
 						<div class="widget-area-2 lochana-box-shadow">
-							<h3 class="widget-title">出诊 List</h3>
+							<h3 class="widget-title">订单列表</h3>
 							<div class="table-responsive mb-3">
 								<table id="tableId" class="table table-bordered table-striped">
 									<thead>
@@ -223,230 +223,24 @@
 													<label class="custom-control-label" for="select-all"></label>
 												</div>
 											</th>
-											<th>Appointment ID</th>
-											<th>Patient ID</th>
-											<th>Token Number</th>
-											<th>医生 Name</th>
-											<th>Problem</th>
-											<th>状态</th>
+											<th>药品名称</th>
+											<th>客户名称</th>
+											<th>配送数量</th>
+											<th>配送状态</th>
+											<th>配送电话</th>
+											<th>配送地址</th>
+											<th>备注</th>
+											<th>操作</th>
 										</tr>
 									</thead>
-									<tbody>
-										<tr>
-											<td>
-												<div class="custom-control custom-checkbox">
-													<input class="custom-control-input" type="checkbox" id="1">
-													<label class="custom-control-label" for="1"></label>
-												</div>
-											</td>
-											<td>AP872</td>
-											<td>P12Y</td>
-											<td>58</td>
-											<td>Dr Manoj</td>
-											<td>Small knee fracture</td>
-											<td>
-												<span class="badge badge-success">Active</span>
-											</td>
-                                        </tr>
-                                        <tr>
-											<td>
-												<div class="custom-control custom-checkbox">
-													<input class="custom-control-input" type="checkbox" id="2">
-													<label class="custom-control-label" for="2"></label>
-												</div>
-											</td>
-											<td>AP8W72</td>
-											<td>P42Y</td>
-											<td>5</td>
-											<td>Dr Daniel</td>
-											<td>Viral Fever</td>
-											<td>
-												<span class="badge badge-success">Active</span>
-											</td>
-                                        </tr>
-                                        <tr>
-											<td>
-												<div class="custom-control custom-checkbox">
-													<input class="custom-control-input" type="checkbox" id="3">
-													<label class="custom-control-label" for="3"></label>
-												</div>
-											</td>
-											<td>AP873</td>
-											<td>P12G</td>
-											<td>8</td>
-											<td>Dr Manoj</td>
-											<td>-</td>
-											<td>
-												<span class="badge badge-warning">Pending</span>
-											</td>
-                                        </tr>
-                                        <tr>
-											<td>
-												<div class="custom-control custom-checkbox">
-													<input class="custom-control-input" type="checkbox" id="4">
-													<label class="custom-control-label" for="4"></label>
-												</div>
-											</td>
-											<td>APY72</td>
-											<td>P1DY</td>
-											<td>18</td>
-											<td>Dr Susan</td>
-											<td>Chest pain</td>
-											<td>
-												<span class="badge badge-success">Active</span>
-											</td>
-                                        </tr>
-                                        <tr>
-											<td>
-												<div class="custom-control custom-checkbox">
-													<input class="custom-control-input" type="checkbox" id="5">
-													<label class="custom-control-label" for="5"></label>
-												</div>
-											</td>
-											<td>AP872</td>
-											<td>P12Y</td>
-											<td>58</td>
-											<td>Dr Manoj</td>
-											<td>Small knee fracture</td>
-											<td>
-												<span class="badge badge-success">Active</span>
-											</td>
-                                        </tr>
-                                        <tr>
-											<td>
-												<div class="custom-control custom-checkbox">
-													<input class="custom-control-input" type="checkbox" id="6">
-													<label class="custom-control-label" for="6"></label>
-												</div>
-											</td>
-											<td>AP8W72</td>
-											<td>P42Y</td>
-											<td>5</td>
-											<td>Dr Daniel</td>
-											<td>Viral Fever</td>
-											<td>
-												<span class="badge badge-success">Active</span>
-											</td>
-                                        </tr>
-                                        <tr>
-											<td>
-												<div class="custom-control custom-checkbox">
-													<input class="custom-control-input" type="checkbox" id="7">
-													<label class="custom-control-label" for="7"></label>
-												</div>
-											</td>
-											<td>AP873</td>
-											<td>P12G</td>
-											<td>8</td>
-											<td>Dr Manoj</td>
-											<td>-</td>
-											<td>
-												<span class="badge badge-warning">Pending</span>
-											</td>
-                                        </tr>
-                                        <tr>
-											<td>
-												<div class="custom-control custom-checkbox">
-													<input class="custom-control-input" type="checkbox" id="8">
-													<label class="custom-control-label" for="8"></label>
-												</div>
-											</td>
-											<td>APY72</td>
-											<td>P1DY</td>
-											<td>18</td>
-											<td>Dr Susan</td>
-											<td>Chest pain</td>
-											<td>
-												<span class="badge badge-success">Active</span>
-											</td>
-                                        </tr>
-                                        <tr>
-											<td>
-												<div class="custom-control custom-checkbox">
-													<input class="custom-control-input" type="checkbox" id="9">
-													<label class="custom-control-label" for="9"></label>
-												</div>
-											</td>
-											<td>AP872</td>
-											<td>P12Y</td>
-											<td>58</td>
-											<td>Dr Manoj</td>
-											<td>Small knee fracture</td>
-											<td>
-												<span class="badge badge-success">Active</span>
-											</td>
-                                        </tr>
-                                        <tr>
-											<td>
-												<div class="custom-control custom-checkbox">
-													<input class="custom-control-input" type="checkbox" id="10">
-													<label class="custom-control-label" for="10"></label>
-												</div>
-											</td>
-											<td>AP8W72</td>
-											<td>P42Y</td>
-											<td>5</td>
-											<td>Dr Daniel</td>
-											<td>Viral Fever</td>
-											<td>
-												<span class="badge badge-success">Active</span>
-											</td>
-                                        </tr>
-                                        <tr>
-											<td>
-												<div class="custom-control custom-checkbox">
-													<input class="custom-control-input" type="checkbox" id="11">
-													<label class="custom-control-label" for="11"></label>
-												</div>
-											</td>
-											<td>AP873</td>
-											<td>P12G</td>
-											<td>8</td>
-											<td>Dr Manoj</td>
-											<td>-</td>
-											<td>
-												<span class="badge badge-warning">Pending</span>
-											</td>
-                                        </tr>
-                                        <tr>
-											<td>
-												<div class="custom-control custom-checkbox">
-													<input class="custom-control-input" type="checkbox" id="12">
-													<label class="custom-control-label" for="12"></label>
-												</div>
-											</td>
-											<td>APY72</td>
-											<td>P1DY</td>
-											<td>18</td>
-											<td>Dr Susan</td>
-											<td>Chest pain</td>
-											<td>
-												<span class="badge badge-success">Active</span>
-											</td>
-										</tr>
+									<tbody id="tb">
+									<tr>
+									</tr>
+
 									</tbody>
                                 </table>
-                                
-								<!--Export links-->
-								<nav aria-label="Page navigation example">
-									<ul class="pagination justify-content-center export-pagination">
-										<li class="page-item">
-											<a class="page-link" href="#"><span class="ti-download"></span> csv</a>
-										</li>
-										<li class="page-item">
-											<a class="page-link" href="#"><span class="ti-printer"></span>  print</a>
-										</li>
-										<li class="page-item">
-											<a class="page-link" href="#"><span class="ti-file"></span> PDF</a>
-										</li>
-										<li class="page-item">
-											<a class="page-link" href="#"><span class="ti-align-justify"></span> Excel</a>
-										</li>
-									</ul>
-								</nav>
-								<!-- /Export links-->
-								<button type="button" class="btn btn-danger mt-3 mb-0"><span class="ti-trash"></span> DELETE</button>
-								<button type="button" class="btn btn-primary mt-3 mb-0"><span class="ti-pencil-alt"></span> EDIT</button>
+
+
 							</div>
 						</div>
 					</div>
@@ -455,19 +249,13 @@
 			</div>
 			<!-- /Main Content -->
 			<!--Copy Rights-->
-			<div class="container">
-				<div class="d-sm-flex justify-content-center">
-				  <span class="text-muted text-center d-block d-sm-inline-block">Copyright © 2018 <a href="#" target="_blank">konnectcode</a>. All rights reserved.</span> 更多模板：<a href="http://www.mycodes.net/" target="_blank">源码之家</a>
-				</div>
-			</div>
+
 			<!-- /Copy Rights-->
 		</div>
 		<!-- /Page Content -->
 	</div>
 	<!-- Back to Top -->
-	<a id="back-to-top" href="#" class="back-to-top">
-		<span class="ti-angle-up"></span>
-	</a>
+
 	<!-- /Back to Top -->
 	<!-- Jquery Library-->
 	<script src="js/jquery-3.2.1.min.js"></script>
@@ -482,7 +270,106 @@
     
 	<!-- Custom Script-->
 	<script src="js/custom.js"></script>
+	<script src="js/common.js"></script>
+
 	<script src="js/custom-datatables.js"></script>
 </body>
+<script>
+	window.onload = initData;
+	function initData(){
+		$.ajax({
+			url:baseUrl+"order/getOrders",
+			type:"get",
+			data:{},
+			success:function (data){
+				if(data.success){
+					var list = data.data;
+					console.info(list);
+					var tbody = $("#tb");
+					var html="";
+					for(var i = 0; i< list.length;i++){
+						var id = list[i].id;
+						var state = list[i].state;
+						html+="<tr>";
+						html+="<td><div className=\"custom-control custom-checkbox\">";
+						html+="<input className=\"custom-control-input\" type=\"checkbox\" id=\"1\">";
+						html+="<label className=\"custom-control-label\" htmlFor=\"1\"></label>";
+						html+="</div>";
+						html+="</td>";
+						html+="<td>"+list[i].merchName+"</td>";
+						html+="<td>"+list[i].cusName+"</td>";
+						html+="<td>"+list[i].count+"</</td>";
+						html+="<td>"+list[i].state.replace("0","订单未配送").replace("1","订单已出库").replace("2","订单已完成")+"</</td>";
+						html+="<td>"+list[i].phone+"</</td>";
+						html+="<td>"+list[i].address+"</</td>";
+						html+="<td>"+list[i].remark+"</</td>";
+						html+="<td>";
+						html+="<button type='button' className='btn btn-danger' id='delbtn' onclick=deleteOrder('"+id+"','"+state+"')><span className='ti-trash'></span> 删除 </button>"
 
+						// html+="<button type='button' className='btn btn-danger' id='editbtn' onclick=editOrder('"+id+"')><span className='ti-trash'></span> 编辑 </button>"
+
+						html+="<button type='button' className='btn btn-danger' id='editbtn' onclick=pubOrder('"+id+"')><span className='ti-trash'></span> 发货 </button>"
+
+						html+="<button type='button' className='btn btn-danger' id='editbtn' onclick=finOrder('"+id+"')><span className='ti-trash'></span> 完成 </button>"
+
+						html+="</td>";
+						html+="</tr>";
+					}
+					tbody.append(html);
+				}else{
+					alert("无订单，请添加");
+				}
+			}
+		});
+	}
+	function deleteOrder(id,state){
+		if(state != '0' ){
+			alert("订单已发出，不能删除");
+			return false;
+		}
+		return false;
+		var confirm = window.confirm("确定要删除吗？")
+		if(!confirm){return false;}
+		$.ajax({
+			url:baseUrl+"order/deleteById",
+			type:"get",
+			data:{id:id},
+			success:function (data){
+				if(data.success){
+					alert("删除成功！");
+					window.location.href="orders.html";
+				}
+			}
+		});
+	}
+	// function editOrder(id){
+	// 	window.location.href="edit-order.html?id="+id;
+	// }
+	function pubOrder(id){
+		$.ajax({
+			url:baseUrl+"order/updateById",
+			type:"get",
+			data:{id:id,state:"1"},
+			success:function (data){
+				if(data.success){
+					alert("发货成功");
+					window.location.href="orders.html";
+				}
+			}
+		});
+	}
+	function finOrder(id){
+		$.ajax({
+			url:baseUrl+"order/updateById",
+			type:"get",
+			data:{id:id,state:"2"},
+			success:function (data){
+				if(data.success){
+					alert("订单完成");
+					window.location.href="orders.html";
+				}
+			}
+		});
+	}
+</script>
 </html>
